--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^4.19.6
   provider: ^6.0.5
   http: ^1.2.1
+  firebase_database: ^10.5.7
+  cloud_firestore: ^4.17.5
 
 dev_dependencies:
   flutter_test:
